-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.11
-
Component/s: None
-
Labels:
This is a regression and (possibly) release blocker. In the Run dialog box do not work commands with system variables, like: %temp%, %windir% etc.
Guilty build in this range:
reactos-bootcd-0.4.10-dev-362-ge6ea0bc-x86-gcc-lin-dbg - worked
...
reactos-bootcd-0.4.10-dev-593-g934104d-x86-gcc-lin-dbg - not worked
This regression is also present in release 0.4.10. Trunk seems to be just as susceptible (Last tested on reactos-bootcd-0.4.12-dev-14-gd0c8636-x86-gcc-lin-dbg).