[0.4.11] [SHELL32] Enable environment variables in 'Run' dialog (#1111)

CORE-15431 (1 of 2)
cherry picked from commit 0.4.12-dev-19-g
06d717e3bc3923d6c1fc2e3420430dd597e517a6